        - perl/selection: matching on unicode characters in the selection
          code was O(n²), which equals infinity in some degenerate cases
          :-> Matching is now done on UTF-8, which makes it almost instant.
        - perl/selection, perl/selection-autotransform: regexes are now
          being interpreted in the locale urxvt was started.
        - fixed struct utmp check in configure for OpenBSD.
        - complete overhaul of the pty/utmp management stuff and configure
          (Emanuele Giaquinta).
	- add tsl/fsl and related capabilities to the terminfo description,
          to set the window title.
        - swap the environment in some more cases. This hopefully fixes
          some segfaults that might be caused by xft asking for env variables
          at the wrong time.
        - removed src/strings.C and src/menubar.C. No menubar support
          anymore.
        - removed all traces of SMOOTH_REFRESH.
        - nuked QNX support.
        - made some fixes to xpm offset and scaling code.
        - perl-overlays and refresh hooks were not applied in correct order.
        - changed coordinate-system of view_start/nsaved to be top to bottom.

7.0  Fri Jan 13 14:02:18 CET 2006
	- added sections for DISTRIBUTION MAINTAINERS and about
          SETUID/SETGID to the FAQ.
        - selection, searchable-scrollback, selection-popup and
          option-popup extensions enabled by default.
        - increased xft drawing speed for problematic fonts. The effect
          will likely be small as 99% of the xft slowness is server-related.
        - perl: much increased functionality, better overlays, popup support
          and much much more.
        - perl: urxvt::line now can set via ->t and ->r.
        - perl: changed interpretation of --perl-ext-common and -pe.
        - perl: finally implemented --perl-eval.
        - perl: non-blocking anyevent support.
        - perl: run tainted and ignore perl-eval/perl-lib if started